@@ -37,29 +37,13 @@ dependencies {
     compileOnly 'com.google.auto.service:auto-service'
 }
 
-tasks.withType(JavaCompile).configureEach {
-    sourceCompatibility = 11
-    options.compilerArgs += [
-        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    ]
-   options.errorprone {
+// Incorrectly identifies tests as junit4 usage
+tasks.checkJUnitDependencies.enabled = false
+tasks.withType(JavaCompile) {
+    options.errorprone {
         check("StrictUnusedVariable", CheckSeverity.OFF)
     }
 }
-
-// Incorrectly identifies tests as junit4 usage
-tasks.checkJUnitDependencies.enabled = false
-tasks.javadoc.enabled = false
 
 // This is necessary to prevent the errorprone plugin from using this very project's output directory
 // TODO(dsanduleac): this might not be necessary in gradle 6 anymore
@@ -72,4 +56,20 @@ publishing.publications.maven {
 javaVersion {
     target = 11
     runtime = 11
+}
+
+moduleJvmArgs {
+    exports = [
+        'jdk.compiler/com.sun.tools.javac.api',
+        'jdk.compiler/com.sun.tools.javac.file',
+        'jdk.compiler/com.sun.tools.javac.code',
+        'jdk.compiler/com.sun.tools.javac.util',
+        'jdk.compiler/com.sun.tools.javac.comp',
+        'jdk.compiler/com.sun.tools.javac.main',
+        'jdk.compiler/com.sun.tools.javac.model',
+        'jdk.compiler/com.sun.tools.javac.parser',
+        'jdk.compiler/com.sun.tools.javac.processing',
+        'jdk.compiler/com.sun.tools.javac.tree',
+        'jdk.compiler/com.sun.tools.javac.util'
+    ]
 }
